# ion

./: .gitignore  AGENTS.md  CANTO.md  CONTEXT.md  Cargo.toml  README.md  TUI-REVIEW.md  go.mod  go.sum
.github/workflows/: ci.yml
.tasks/: tk-005f.json  tk-00sl.json  tk-03mn.json  tk-042d.json  tk-04sf.json  tk-05xm.json  tk-0asw.json  tk-0ihd.json  tk-0j65.json  tk-0kbh.json  tk-0kxp.json  tk-0rwm.json  tk-0tzu.json  tk-0uui.json  tk-0wxf.json  tk-13dv.json  tk-19ah.json  tk-1dfc.json  tk-1dle.json  tk-1esf.json  tk-1flb.json  tk-1lso.json  tk-1mll.json  tk-1rfr.json  tk-1uns.json  tk-1y3g.json  tk-1ygm.json  tk-24mu.json  tk-261o.json  tk-268g.json  tk-28a4.json  tk-2aq7.json  tk-2bk7.json  tk-2bxp.json  tk-2g5e.json  tk-2olk.json  tk-2x2e.json  tk-2x4g.json  tk-32ou.json  tk-3a5h.json  (+476 more)
ai/: CODEX-REVIEW.md  CONTEXT.md  DECISIONS-archive.md  DECISIONS.md  DESIGN.md  PLAN.md  README.md  ROADMAP.md  SPRINTS.md  STATUS.md  handoff.md  tui-design-conversation.md
ai/business/: MARKET.md  MONETIZATION.md  POSITIONING.md  README.md  STRATEGY.md
ai/design/: README.md  acp-integration.md  active-turn-steering-contract-2026-04-30.md  agent.md  chat-positioning.md  chat-softwrap-scrollback-2026-02.md  compaction-v2.md  config-system.md  context-system.md  context.md  core-minimal-agent-reset-2026-04-28.md  dependency-upgrades.md  diff-highlighting.md  go-host-architecture.md  inline-viewport.md  interrupt-handling.md  ion-app-cli-lifecycle-2026-04-27.md  ion-display-projection-2026-04-27.md  ion-native-backend-spine-2026-04-27.md  keybindings.md  memory-and-context.md  model-listing-refactor.md  module-structure.md  native-core-loop-architecture.md  native-ion-agent.md  native-vs-skills.md  oauth-subscriptions.md  permission-system.md  permissions-v2.md  plugin-architecture.md  provider-replacement.md  refactor-provider.md  refactoring-roadmap.md  rewrite-roadmap.md  roadmap-2026-05-01.md  runtime-stack-integration-plan-2026-02.md  session-interface.md  session-storage.md  subagents-swarms-rlm.md  tool-pass.md  (+8 more)
ai/ideas/: interactive-shell.md
ai/plans/: 2026-02-20-chat-rendering-enhancements.md  tui-inline-scrollback-2026-03-27.md
ai/research/: README.md  adaptive-spec-pattern.md  (+93 more)
app/: backend.go  child_events.go  commands.go  commands_catalog.go  commands_picker.go  commands_runtime.go  commands_session.go  commands_settings.go  commands_test.go  completion.go  core_loop_smoke_test.go  entry_projection.go  event_reducer_test.go  events.go  git_diff.go  git_diff_test.go  input_state.go  input_test.go  integration_test.go  markdown.go  model.go  model_builders.go  model_status.go  p1_tui_matrix_test.go  persistence.go  persistence_controller.go  picker.go  picker_reducer_test.go  picker_test.go  presets.go  progress_reducer.go  progress_reducer_test.go  render.go  render_bench_test.go  runtime_controller.go  runtime_controller_test.go  runtime_snapshot.go  runtime_test.go  session_controller.go  session_picker.go  (+21 more)
approval/: approval.go  approval_test.go  classifier_policy.go  classifier_policy_test.go  example_test.go  guard.go  policy_chain_test.go
audit/: audit.go
cantotesting/: mock.go
config/: config.go  config_test.go  redact.go  redact_test.go
crates/tui/: Cargo.toml
crates/tui/examples/: hello.rs
crates/tui/src/: app.rs  buffer.rs  geometry.rs  layout.rs  lib.rs  style.rs  terminal.rs  theme.rs
crates/tui/src/widgets/: block.rs  canvas.rs  col.rs  input.rs  list.rs  mod.rs  row.rs  scroll.rs  testing.rs
ctxerr/: context.go  context_test.go
docs/: memory.md  subagents.md  tools.md  workspace-trust.md
examples/: reedline_spike.rs  rustyline_spike.rs
go-host/: README.md  go.mod  go.sum
llm/: catalog.go  catalog_test.go  classifier.go  content_block.go  content_block_test.go  cost.go  doc.go  embed.go  faux.go  message.go  models.go  models_registry.go  models_registry_test.go  models_test.go  presets.go  presets_test.go  provider.go  provider_compat.go  registry.go  request.go  standard_classifier.go  stream.go  stream_test.go  transform_roles.go  transform_thinking.go
prompt/: budget.go  budget_test.go  builder_bench_test.go  builder_insert.go  builder_test.go  cache.go  cache_test.go  lazytool.go  lazytool_test.go  masking_test.go
providers/: catalog.go  catalog_test.go  factory.go  providers.go
safety/: audit_test.go  env.go  env_test.go  protected.go  protected_test.go  safety.go  safety_test.go  sandbox_darwin_test.go  sandbox_linux.go  sandbox_other.go
session/: acrfence.go  acrfence_test.go  agent_event.go  agent_session.go  agent_types.go  agent_util.go  ancestry.go  append.go  artifact.go  branch_summary.go  cancel.go  canto_projection.go  canto_session.go  canto_store.go  canto_store_test.go  codec_bench_test.go  codec_test.go  context.go  context_test.go  distill_test.go  doc.go  episode.go  errors.go  event.go  event_drain.go  event_drain_test.go  fork.go  fork_test.go  history.go  history_test.go  input_routing.go  input_routing_test.go  jsonl.go  jsonl_events.go  jsonl_store_test.go  lazy_session.go  lifecycle.go  lifecycle_test.go  message.go  message_test.go  (+38 more)
src/: cli.rs  error.rs  lib.rs  main.rs
tool/: acrfence.go  acrfence_test.go  approval.go  bash.go  bash_output.go  bash_test.go  coding_metadata.go  coding_registry.go  coding_registry_test.go  errors.go  executor.go  file.go  file_edit.go  file_edit_eval_test.go  file_list.go  file_read.go  file_search.go  file_search_test.go  file_test.go  file_write.go  func.go  func_test.go  metadata.go  metadata_test.go  output.go  output_test.go  registry.go  registry_test.go  sandbox.go  sandbox_test.go  search.go  skill_read.go  skill_read_test.go  tool.go  tooldisplay.go  tooldisplay_test.go  typed_args.go  typed_args_test.go
tracing/: provider.go  tool.go  tracing.go  tracing_test.go
workspace/: escalate_test.go  search_index.go  validator.go  validator_test.go
(+989 files in other folders)
