[package]
name = "ion"
version = "0.0.0"
edition = "2024"
description = "Local-first TUI coding agent with persistent memory"
license = "MIT"
repository = "https://github.com/nijaru/ion"
keywords = ["ai", "agent", "tui", "coding", "memory"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
async-recursion = "1.1.1"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.31"
glob = "0.3.3"
ignore = "0.4.25"
mcp-sdk-rs = "0.3.4"
minijinja = "2.14.0"
ndarray = "0.17.2"
omendb = "0.0.23"
ort = { version = "2.0.0-rc.9", features = ["load-dynamic", "coreml", "cuda", "rocm", "directml"] }
ratatui = "0.30.0"
regex = "1.12.2"
reqwest = { version = "0.12.28", features = ["json", "stream"] }
reqwest-eventsource = "0.6.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
similar = "2.7.0"
thiserror = "2.0.17"
tiktoken-rs = "0.9.1"
tokenizers = { version = "0.22.2", features = ["http"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tree-sitter = "0.26.3"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
tui-markdown = "0.3.7"
unicode-segmentation = "1.12.0"
uuid = { version = "1.19.0", features = ["v4"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.24.0"
