[package]
name = "ion"
version = "0.0.0"
edition = "2024"
description = "Fast TUI coding agent"
license = "LicenseRef-PolyForm-Shield-1.0.0"
repository = "https://github.com/nijaru/ion"
keywords = ["ai", "agent", "tui", "coding", "llm"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bpe-openai = "0.3.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.31"
fuzzy-matcher = "0.3.7"
globset = "0.4.18"
ignore = "0.4.25"
minijinja = "2.14.0"
ropey = "1.6"
regex = "1.12.2"
reqwest = { version = "0.12.28", features = ["json", "stream"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
similar = "2.7.0"
syntect = { version = "5.3.0", features = ["default-syntaxes", "default-themes"] }
tempfile = "3.24.0"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.19.0", features = ["v4"] }
unicode-width = "0.2.2"
bytecount = { version = "0.6.9", features = ["runtime-dispatch-simd"] }
grep-searcher = "0.1.16"
grep-regex = "0.1.14"
html2text = "0.16.6"
serde_yaml = "0.9.34"
pulldown-cmark = "0.13.0"
open = "5.3.3"
sha2 = "0.10.9"
base64 = "0.22.1"
rand = "0.9.2"
url = "2.5.8"
urlencoding = "2.1.3"
bytes = "1.11.0"
pdf-extract = "0.10.0"
scraper = "0.25.0"
rnk = "0.17.3"
rmcp = { version = "0.15.0", features = ["client", "transport-child-process"] }

[profile.release]
strip = true

[dev-dependencies]
