[package]
name = "tui"
version = "0.0.0"
edition = "2024"
license = "LicenseRef-PolyForm-Shield-1.0.0"

[dependencies]
crossterm    = { version = "0.29", features = ["event-stream"] }
tokio        = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
futures      = "0.3"
unicode-segmentation = "1.12"
unicode-width = "0.2"
bitflags     = "2"
thiserror    = "2"
taffy = "0.9.2"
